@@ -2206,8 +2206,9 @@ CONVERT skill.
 
 REMOVE=\
 Command : REMOVE\n\r\
-Usage   : REMOVE [ITEM NAME]\n\r\
+Usage   : REMOVE [ITEM NAME/LOCATION]\n\r\
 Example : remove sword\n\r\
+Example : remove from head\n\r\
 Short(s): rem\n\r\
 Will remove the specified item that is being worn, held, or wielded, \
 and place it back into your carried inventory.  See the INVENTORY, \
