@@ -18,6 +18,7 @@
  17. ACCOUNT command can now show chars with waiting mail, or missed tells.
  18. Prop_WearAdjuster allows dressing and content manipulation, from outside (saddlebags).
  19. New item: GenBagOfHolding
+ 20. REMOVE command can now target a wear location.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
